# sb-tracker

./: .pre-commit-config.yaml  Makefile  README.md  config.ini  config_test.ini  logger.py  main.py  pyproject.toml
app/config/: config.py
components/: commons.py  component_project.py  component_project_report.py  component_project_status.py  component_project_tasks.py  components_project.py  components_project_status.py
config/: app_config.py
definition/: definition.py  expenses.py  invoice.py  project.py  timetrack.py
storage/: storage.py  test_storage.py
